# Laser-shadow-filter-improved

nifti_laser_filtering/: CMakeLists.txt  README.txt  mainpage.dox  package.xml  tradr_laser_filters.xml
nifti_laser_filtering/config/: nifti_laser_filters.yaml  nifti_laser_filters.yaml.orig
nifti_laser_filtering/docs/: IslandFilter.md  NearFilter.md  PeakFilter.md  RobotSelfFilter.md  SelfEdgeLaserFilter.md  TradrLaserShadowFilter.md  index.md
nifti_laser_filtering/include/nifti_laser_filtering/: IslandFilter.h  NearFilter.h  PeakFilter.h  RobotSelfFilter.h  SelfEdgeLaserFilter.h  SelfEdgeLaserFilter.h.orig  TradrLaserShadowFilter.h
nifti_laser_filtering/include/nifti_laser_filtering/nodes/: nifti_laser_filtering.h
nifti_laser_filtering/launch/: nifti_laser_filtering.launch
nifti_laser_filtering/matlab_calibration/: correct_range_values.m  csv_load.m  eval_range_intensity_correction.m  load_range_data.m  use_range_correction.m
nifti_laser_filtering/matlab_calibration/example_scan_set/: nifti_lscans_20150611_01_wood_board_track13h55m49s.mat  nifti_lscans_20150611_02_white_paper_track15h02m54s.mat  nifti_lscans_20150611_03_gray_paper_track15h13m14s.mat  nifti_lscans_20150611_04_black_paper_track15h29m09s.mat  nifti_lscans_20150611_05_green_fabric_track15h36m42s.mat
nifti_laser_filtering/scripts/: calibrate_lms_undistortion.m  calibration_data.csv
nifti_laser_filtering/src/: IslandFilter.cpp  NearFilter.cpp  PeakFilter.cpp  RobotSelfFilter.cpp  SelfEdgeLaserFilter.cpp  SelfEdgeLaserFilter.cpp.orig  TradrLaserShadowFilter.cpp
nifti_laser_filtering/src/nodes/: nifti_laser_filtering.cpp  robot_radius_visualization.py
nifti_robot_description/urdf/: nifti_robot.xacro
